fix(auto-deploy): edit auto-deploy.yml

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -9,7 +9,7 @@ on:
 
 # environment variables
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/usagi
+  DOCKER_IMAGE: ghcr.io/${{ secrets.GHCR_USERNAME }}/usagi
   VERSION: ${{ github.sha }}
   NAME: usagi_auto_deploy
 
