--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -7,12 +7,6 @@ on:
     branches:
       - "main"
 
-# environment variables
-env:
-  DOCKER_IMAGE: ghcr.io/${{ secrets.GHCR_USERNAME }}/usagi
-  VERSION: ${{ github.sha }}
-  NAME: usagi_auto_deploy
-
 # build, deploy job definition
 jobs:
   build:
@@ -24,8 +18,8 @@ jobs:
         uses: actions/checkout@v2
       # setup docker buildx
       - name: Setup docker buildx
-        id: buildx
         uses: docker/setup-buildx-action@v1
+        id: buildx
       # cache docker layers
       - name: Cache docker layers
         uses: actions/cache@v2
@@ -45,6 +39,10 @@ jobs:
       - name: Build docker image
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: ${{ env.DOCKER_IMAGE }}:latest
+          tags: |
+            ghcr.io/${{ secrets.GHCR_USERNAME }}/usagi:latest
+            ghcr.io/${{ secrets.GHCR_USERNAME }}/usagi:${{ github.sha }}
