--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -44,3 +44,7 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/usagi:latest
+      - name: Invoke auto deploy webhook
+        uses: distributhor/workflow-webhook@v2
+        with:
+          webhook_url: ${{ secrets.WEBHOOK_URL }}
