--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -45,6 +45,5 @@ jobs:
           push: true
           tags: ghcr.io/${{ secrets.GHCR_USERNAME }}/usagi:latest
       - name: Invoke auto deploy webhook
-        uses: distributhor/workflow-webhook@v2
-        with:
-          webhook_url: ${{ secrets.WEBHOOK_URL }}
+        run: |
+          curl -X POST ${{ secrets.WEBHOOK_URL }}
