--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.37.0",
     "eslint-config-next": "13.3.0",
+    "ioredis": "^5.3.2",
     "next": "13.3.0",
     "next-auth": "^4.22.0",
     "postcss": "8.4.21",
@@ -27,6 +29,7 @@
     "react-dom": "18.2.0",
     "sharp": "^0.32.0",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "uuid": "^9.0.0"
   }
 }
